--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@next/swc-wasm-nodejs": "13.5.1",
+    "@next/swc-wasm-nodejs": "^16.0.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -47,8 +47,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "20.6.2",
     "@types/nodemailer": "^7.0.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
@@ -60,16 +60,16 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "^16.0.7",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "^15.5.3",
+    "next": "^16.0.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^7.0.9",
     "postcss": "^8.5.6",
-    "react": "18.2.0",
+    "react": "^19.2.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
